src/main/java/application/dataset/test/invalidRandomAddresses/todo/hard/completedCorrectly/RandomAddressesWithThreeWrongRandomFields.java
package application.dataset.test.invalidRandomAddresses.todo.hard.completedCorrectly;

public class RandomAddressesWithThreeWrongRandomFields {
}
